<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_lifecycle_manager</name>
  <version>0.0.0</version>
  <description>Graphical frontend for interacting with lifecycles.</description>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>
  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/ros-controls/ros2_control</url>

  <author email="christoph.froehlich@ait.ac.at">Christoph Froehlich</author>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2lifecycle</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_gui</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
